--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,10 +1,10 @@
 server:
   port: 8080
   servlet:
-    context-path: /the-spot
+    context-path: /sampradaya-silks
 spring:
   application:
-    name: the-spot-bookings-be
+    name: sampradaya-silks-be
   jpa:
     hibernate:
       ddl-auto: update
@@ -13,9 +13,9 @@ spring:
     #      default_schema: sol_gen_model
     show-sql: true
   datasource:
-    url: jdbc:postgresql://localhost:5432/the_spot_bookings
-    username: postgres
-    password: admin@123
+    url: jdbc:postgresql://dpg-cr6o0etds78s73c12blg-a.oregon-postgres.render.com/the_spot_bookings
+    username: the_spot_bookings_user
+    password: Y0ik27FNC2R2W2jwlafXgPfC09GB3VvX
     driver-class-name: org.postgresql.Driver
   sql:
     init:
